--- a/P4DialogBased/P4DialogBased.vcxproj.filters
+++ b/P4DialogBased/P4DialogBased.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="P3MFC程序.h">
+    <ClInclude Include="P4DialogBased.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="P4DialogBasedDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="framework.h">
@@ -24,75 +27,46 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="MainFrm.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="P3MFC程序Doc.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="P3MFC程序View.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="MyDialog.h">
+    <ClInclude Include="MyButton.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="P3MFC程序.cpp">
+    <ClCompile Include="P4DialogBased.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="MainFrm.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="P3MFC程序Doc.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="P3MFC程序View.cpp">
+    <ClCompile Include="P4DialogBasedDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="MyDialog.cpp">
+    <ClCompile Include="MyButton.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="P3MFC.rc">
+    <ResourceCompile Include="P4DialogBased.rc">
       <Filter>资源文件</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\P3MFC.rc2">
+    <None Include="res\P4DialogBased.rc2">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\P3MFC程序Doc.ico">
-      <Filter>资源文件</Filter>
-    </Image>
-    <Image Include="res\P3MFC程序.ico">
-      <Filter>资源文件</Filter>
-    </Image>
-    <Image Include="res\Toolbar.bmp">
+    <Image Include="res\P4DialogBased.ico">
       <Filter>资源文件</Filter>
     </Image>
     <Image Include="res\bitmap1.bmp">
       <Filter>资源文件</Filter>
     </Image>
-    <Image Include="res\bitmap2.bmp">
-      <Filter>资源文件</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="说明.txt">
-      <Filter>源文件</Filter>
-    </Text>
   </ItemGroup>
 </Project>
